Fix wrapping issues.

--- a/snitch/css/out.css
+++ b/snitch/css/out.css
@@ -13,3 +13,6 @@
  #out .active {
 	 display: block;
  }
+ #out pre {
+	 white-space: normal;
+ }
